--- a/games/play.html
+++ b/games/play.html
@@ -1,35 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="google-adsense-account" content="ca-pub-1772815021916812">
-<title>Play</title>
-<meta name="description" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../assets/styles/css/global.min.css">
-<link rel="stylesheet" href="../assets/styles/css/playGame.min.css">
-<link rel="stylesheet" href="../assets/font-awesome/css/all.css">
-<script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
+  <meta charset="utf-8">
+  <meta name="google-adsense-account" content="ca-pub-1772815021916812">
+  <title>Play</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../assets/font-awesome/css/all.css">
+  <link rel="stylesheet" href="../assets/styles/main.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
 </head>
 
-<body>
-    <iframe id="gameFrame"></iframe>
-    <div id="bottomMenu">
-        <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
-        <iframe id="navbar" src="../assets/menu.html"></iframe>
-        <a id="sourceViewLink"><i class="fa-2x fa-solid fa-file"></i></a>
-        <a id="downloadFilesLink"><i class="fa-2x fa-solid fa-download"></i></a>
+<body class="bg-gray-900 min-h-screen">
+<div class="text-gray-50 min-h-screen grid grid-cols-[auto_1fr]">
+  <div class="sidebar w-56 p-3 sticky top-0 max-h-screen p-3 overflow-hidden bg-gray-900 border-r border-gray-700 text-nowrap transition-all ease-in-out duration-300 close">
+    <div class="flex flex-col gap-10">
+      <div class="heading flex h-32 justify-between items-center">
+        <a class="logo text-3xl font-bold p-5" href="../index.html">
+          Lupine<br>
+          Vault
+        </a>
+        <button class="toggle-button text-gray-400 hover:text-gray-100 hover:bg-gray-800 rounded p-3">
+          <span class="fa fa-bars"></span>
+        </button>
+      </div>
+      <nav>
+        <ul class="list-style-none">
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg rounded text-gray-400 hover:bg-gray-800" href="../index.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-home-lg-alt"></span>
+              </span>
+              Home
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-fuchsia-300 rounded hover:text-gray-100 hover:bg-gray-800" href="../games/select.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-gamepad"></span>
+              </span>
+              Games
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-gray-400 rounded hover:text-gray-100 hover:bg-gray-800" href="../watch/index.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-tv"></span>
+              </span>
+              Watch
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-gray-400 rounded hover:text-gray-100 hover:bg-gray-800" href="../chat.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-comments"></span>
+              </span>
+              Chat
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-gray-400 rounded hover:text-gray-100 hover:bg-gray-800" href="../proxy.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-sitemap"></span>
+              </span>
+              Proxy
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
+  </div>
+  <div class="app-content flex-1 p-5">
+    <iframe id="gameFrame" class="w-full h-full"></iframe>
+  </div>
+</div>
 
-    <!-- Off-Screen Visitor Counter -->
-    <iframe srcdoc="
+<!-- Off-Screen Visitor Counter -->
+<iframe srcdoc="
         <a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a>
         <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=d222fd70cd154863dc5f771e95646a1619a1d358'></script>
         <script type='text/javascript' src='https://www.freevisitorcounters.com/en/home/counter/1262052/t/1'></script>
     " style="position: absolute; top: -9999px; left: -9999px; width: 0; height: 0; border: none;"></iframe>
+<script src="../assets/js/utils/common.utils.js"></script>
+<script src="../assets/js/components/Carousel.js"></script>
+<script src="../assets/js/services/GameService.js"></script>
+<script src="../assets/js/services/MoviesService.js"></script>
+<script src="../assets/js/index.js"></script>
 
-    <script src="../assets/js/global.js"></script>
-    <script src="../assets/js/playGame.js"></script>
+<script src="../assets/js/global.js"></script>
+<script src="../assets/js/playGame.js"></script>
+
 </body>
 
 </html>
