--- a/games/select.html
+++ b/games/select.html
@@ -3,29 +3,98 @@
 <html>
 <head>
 
-    <meta name="google-adsense-account" content="ca-pub-1772815021916812">
-<meta charset="utf-8">
-<title>Select Game</title>
-        <link rel="stylesheet" href="../assets/styles/css/global.min.css">
-        <link rel="stylesheet" href="../assets/styles/css/gameSelect.min.css">
-        <link rel="stylesheet" href="../assets/font-awesome/css/all.css">
-        <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
+  <meta name="google-adsense-account" content="ca-pub-1772815021916812">
+  <meta charset="utf-8">
+  <title>Select Game</title>
+  <link rel="stylesheet" href="../assets/font-awesome/css/all.css">
+  <link rel="stylesheet" href="../assets/styles/main.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="52bfea34-46bb-49d1-976f-a5252508ddef"></script>
 </head>
 
-<body>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1772815021916812"
-     crossorigin="anonymous"></script>
-     <span id="corner-menu"><i id="hamburger-menu" class="fa-2x fa-solid fa-navicon" onclick="toggleMenu()"></i></span>
-        <iframe id="navbar" src="../assets/menu.html"></iframe>
-    <h1>Select Game</h1>
-    <input type="text" id="searchInput" placeholder="Search">
-    <br><br>
-    <div id="gameContainer"></div>
-    <p id="gameCount">Loading...</p>
-    <a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=d222fd70cd154863dc5f771e95646a1619a1d358'></script>
+<body class="bg-gray-900 min-h-screen">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1772815021916812"
+        crossorigin="anonymous"></script>
+<div class="text-gray-50 min-h-screen grid grid-cols-[auto_1fr]">
+  <div class="sidebar w-56 p-3 sticky top-0 max-h-screen p-3 overflow-hidden bg-gray-900 border-r border-gray-700 text-nowrap transition-all ease-in-out duration-300">
+    <div class="flex flex-col gap-10">
+      <div class="heading flex h-32 justify-between items-center">
+        <a class="logo text-3xl font-bold p-5" href="../index.html">
+          Lupine<br>
+          Vault
+        </a>
+        <button class="toggle-button text-gray-400 hover:text-gray-100 hover:bg-gray-800 rounded p-3">
+          <span class="fa fa-bars"></span>
+        </button>
+      </div>
+      <nav>
+        <ul class="list-style-none">
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-gray-400 rounded hover:bg-gray-800" href="../index.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-home-lg-alt"></span>
+              </span>
+              Home
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-fuchsia-300 rounded hover:text-gray-100 hover:bg-gray-800" href="select.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-gamepad"></span>
+              </span>
+              Games
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-gray-400 rounded hover:text-gray-100 hover:bg-gray-800" href="../watch/index.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-tv"></span>
+              </span>
+              Watch
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-gray-400 rounded hover:text-gray-100 hover:bg-gray-800" href="../chat.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-comments"></span>
+              </span>
+              Chat
+            </a>
+          </li>
+          <li>
+            <a class="flex gap-5 p-3 items-center text-lg text-gray-400 rounded hover:text-gray-100 hover:bg-gray-800" href="../proxy.html">
+              <span class="flex items-center justify-center w-8 h-8">
+                <span class="fa fa-regular fa-sitemap"></span>
+              </span>
+              Proxy
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  <div class="app-content flex-1">
+    <div class="w-full h-80 flex flex-col justify-center items-center relative">
+      <img class="absolute top-0 left-0 w-full h-full object-cover opacity-20 -z-10 blur-sm"
+           src="https://images.unsplash.com/photo-1511512578047-dfb367046420?q=80&w=1742&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+           alt="Background">
+      <h1 class="text-6xl">Select Game</h1>
+      <p id="gameCount" class="my-5">Loading...</p>
+      <input type="text" id="searchInput" class="rounded-3xl px-5 py-3 text-gray-900 w-96" placeholder="Search">
+    </div>
+    <div id="gameContainer" class="grid grid-cols-8 gap-5 p-5"></div>
+  </div>
+</div>
+
+<a href='http://www.freevisitorcounters.com'>freevisitorcounterss Homepage</a>
+<script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=d222fd70cd154863dc5f771e95646a1619a1d358'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1262052/t/1"></script>
-    <script src="../assets/js/gameSelect.js"></script>
-    <script src="../assets/js/global.js"></script>
+<script src="../assets/js/utils/common.utils.js"></script>
+<script src="../assets/js/components/Carousel.js"></script>
+<script src="../assets/js/services/GameService.js"></script>
+<script src="../assets/js/services/MoviesService.js"></script>
+<script src="../assets/js/gameSelect.js"></script>
+<script src="../assets/js/global.js"></script>
 </body>
 
 </html>
