--- a/games/files/pdftris/index.html
+++ b/games/files/pdftris/index.html
@@ -12,5 +12,7 @@
 </head>
 <body>
     <p>Redirecting to game...</p>
+
+    <p><a href="game.pdf" target="_blank">If you are not brought to the game, click here.</a></p>
 </body>
 </html>
