--- a/games/files/pdftris/index.html
+++ b/games/files/pdftris/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        p {
+            color: #9b4dca; /* Bright purple */
+        }
+        a {
+            color: #39ff14; /* Neon green */
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
     <script>
         window.onload = function() {
             window.open('game.pdf', '_blank');
