--- a/static/embed.html
+++ b/static/embed.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Embed</title>
+    <title>Alkali ~ proxy embed</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -2239,12 +2239,6 @@
                 opacity: 0;
             }
         }
-        #bigTitle {
-         width: 35vw;
-         margin: 0 auto; /* Centers the element horizontally */
-         display: block; /* Converts the image to a block element for proper centering */
-            text-align: center; /* Not needed for the image itself but can stay for consistency */
-        }
     </style>
 </head>
 
@@ -2252,8 +2246,7 @@
     <div id="loadingbox">
         <div id="main">
             <span class="loader"></span>
-            <img src="logo.png" alt="Logo" id="bigTitle">
-            <p>Loading Embed...</p>
+            <p>Loading Alkali...</p>
         </div>
     </div>
     <div class="starfall">
