--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,11 @@
     }
     widgetbot {
       width: 100%;
-      height: 100vh;
+      height: 95vh;
+    }
+    #banner {
+      width: 100%;
+      height: 5vh;
     }
   </style>
 </head>
@@ -24,6 +28,7 @@
         <script src="/particles.min.js"></script>
         <div id="sidebarMenu"></div>
 
+        <div id="banner">Join this server on Discord for more features <a href="https://discord.gg/NNkeGvp5Ry">here</a></div>
         <div id="mainContent">
   <widgetbot
     server="1298094096858218516"
