--- a/request-game.html
+++ b/request-game.html
@@ -14,6 +14,7 @@
     <main class="container">
         <h1>Request a Game</h1>
         <p>Please fill out the form below to submit your game request. We look forward to hearing your suggestions!</p>
+        <h2>Use a REAL email so we can contact you. Non-real emails will be ignored.</h2>
         <form id="request-form" name="request-game-form" action="https://formspree.io/f/xbljkwak" method="post">
             <!-- Contact Information -->
             <fieldset class="form-section">
