add benrogo analytics

--- a/TIW/index.html
+++ b/TIW/index.html
@@ -49,6 +49,7 @@
         <a href="https://lupinevault.com/" class="button">Go To LupineVault</a>
         <br>
         <a href="https://starttiw.org/" class="button">Go To TIW</a>
+        <script src="/api/getMetrics.js"></script>
     </div>
 </body>
 </html>
