--- a/active/index.html
+++ b/active/index.html
@@ -86,6 +86,7 @@
       <script src="uv/uv.config.js" charset="UTF-8" defer></script>
       <script src="register-sw.js" charset="UTF-8" defer></script>
       <script src="search.js" charset="UTF-8" defer></script>
+      <script src="/api/getMetrics.js"></script>
       <script src="index.js" charset="UTF-8" defer></script>
       <script src="/assets/js/global.js"></script>
 </body>
