--- a/chat.html
+++ b/chat.html
@@ -36,6 +36,7 @@
   ></widgetbot>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+  <script src="/api/getMetrics.js"></script>
   <script src="assets/js/global.js"></script>
 </body>
 </html>
