--- a/watch/info.html
+++ b/watch/info.html
@@ -19,5 +19,6 @@
     <h2>Legal</h2>
     <p>We do not own any of these movies or TV shows. We do not own the files. We did not pirate these. All of the movies and TV shows on LupineVault are from an external API.</p>
     <script src="../assets/js/global.js"></script>
+    <script src="/api/getMetrics.js"></script>
 </body>
 </html>
