--- a/watch/play.html
+++ b/watch/play.html
@@ -18,6 +18,7 @@
         <footer></footer>
         </div>
         <script src="../assets/js/watchPlay.js"></script>
+        <script src="/api/getMetrics.js"></script>
         <script src="../assets/js/global.js"></script>
     </body>
 </html>
