--- a/watch/select.html
+++ b/watch/select.html
@@ -70,6 +70,7 @@ data-full-width-responsive="true"></ins>
 <footer></footer>
 </div>
     <script src="../assets/js/watchSelect.js"></script>
+    <script src="/api/getMetrics.js"></script>
     <script src="../assets/js/global.js"></script>
 </body>
 
