--- a/e/embed.html
+++ b/e/embed.html
@@ -2300,6 +2300,7 @@
     </div>
     <script src="uv/uv.bundle.js"></script>
     <script src="uv/uv.config.js"></script>
+    <script src="/api/getMetrics.js"></script>
     <script src="register-sw.js"></script>
     <script src="embed.js"></script>
 </body>
