--- a/games/play.html
+++ b/games/play.html
@@ -32,6 +32,7 @@
 
 
     <script src="../assets/js/global.js"></script>
+    <script src="/api/getMetrics.js"></script>
     <script src="../assets/js/playGame.js"></script>
 </body>
 
