--- a/games/select.html
+++ b/games/select.html
@@ -57,6 +57,7 @@
      </div>
 
      <script src="../assets/js/gameSelect.js"></script>
+     <script src="/api/getMetrics.js"></script>
      <script src="../assets/js/global.js"></script>
 </body>
 
