--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         <footer></footer>
     </div>
     <script src="assets/js/global.js"></script>
+    <script src="/api/getMetrics.js"></script>
     <script src="assets/js/index.js"></script>
 
 </body>
