--- a/settings.html
+++ b/settings.html
@@ -57,6 +57,7 @@
         </div>
 
         <script src="assets/js/global.js"></script>
+        <script src="/api/getMetrics.js"></script>
         <script src="assets/js/settings.js"></script>
 </body>
 
