--- a/e/embed.html
+++ b/e/embed.html
@@ -2252,7 +2252,7 @@
     <div id="loadingbox">
         <div id="main">
             <span class="loader"></span>
-            <img src="logo.png" alt="Logo" id="bigTitle">
+            <img src="../assets/images/Title.png" alt="Logo" id="bigTitle">
             <p>Loading Embed...</p>
         </div>
     </div>
