--- a/e/embed.html
+++ b/e/embed.html
@@ -2298,8 +2298,8 @@
         <div class="falling-star"></div>
         <div class="falling-star"></div>
     </div>
-    <script src="uv/uv.bundle.js"></script>
-    <script src="uv/uv.config.js"></script>
+    <script src="uv/uv.bundle.js" charset="UTF-8"></script>
+    <script src="uv/uv.config.js" charset="UTF-8"></script>
     <script src="/api/getMetrics.js"></script>
     <script src="register-sw.js"></script>
     <script src="embed.js"></script>
