--- a/active/embed.html
+++ b/active/embed.html
@@ -2252,7 +2252,10 @@
     <div id="loadingbox">
         <div id="main">
             <span class="loader"></span>
-            <img src="../assets/images/Title.png" alt="Logo" id="bigTitle">
+            <a href="https://LupineVault.com">
+                <img src="../assets/images/Title.png" alt="Logo" id="bigTitle">
+            </a>
+
             <p>Loading Embed...</p>
         </div>
     </div>
