Add service worker registration and fix typo in welcome message

--- a/info/index.html
+++ b/info/index.html
@@ -19,7 +19,7 @@
         <div id="infoSection">
             <h2 id="about">About</h2>
             <br>
-            <p>Welcome to LupineVault, a collection of unblοcked games movies, TV shows, and a proxy!</p>
+            <p>Welcome to LupineVault, a collection of unblocked games movies, TV shows, and a proxy!</p>
             <p>LupineVault was created by <a href="https://rhw.one">tf7software</a> (Backend) and <a
                     href="https://github.com/InfinityLoop1">InfinityLoop</a> (Frontend)</p>
             <p>LupineVault was inspired by InfinityGamer, an old game site by InfinityLoop</p>
