--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <h3 id="heading">Loading... Please Wait</h3>
         </div>
 
+        <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border: 2px solid black; z-index: 1000;">
+            Go Check Out <a href="https://lupine.red">LupineVault RED</a>!
+        </div>
 
         <div id="tilesContainer">
             <div class="tile" id="newsTile">
@@ -77,7 +80,15 @@
     <script src="/assets/js/global.js"></script>
     <script src="/api/getMetrics.js"></script>
     <script src="/assets/js/index.js"></script>
-
+    <script>
+        window.onload = function() {
+            var popup = document.getElementById('popup');
+            popup.style.display = 'block';
+            setTimeout(function() {
+                popup.style.display = 'none';
+            }, 5000);
+        };
+    </script>
 </body>
 
 </html>
