--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h3 id="heading">Loading... Please Wait</h3>
         </div>
 
-        <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; padding: 20px; border: 2px solid black; z-index: 1000;">
+        <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgb(0, 0, 0); padding: 40px; border: 4px solid black; z-index: 1000;"></div>
             Go Check Out <a href="https://lupine.red">LupineVault RED</a>!
         </div>
 
