--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #6a0dad; color: white; padding: 40px; border: 4px solid #4b0082; border-radius: 10px; z-index: 1000; text-align: center;">
-            <p>Go Check Out <a href="https://lupine.red" style="color: #ffccff; text-decoration: none;">LupineVault RED</a>!</p>
+            <p>Go Check Out <a href="https://lupine.red" style="color: #ffccff; text-decoration: none;" target="_blank">LupineVault RED</a>!</p>
         </div>
 
         <div id="tilesContainer">
