--- a/settings.html
+++ b/settings.html
@@ -55,10 +55,20 @@
                 </div>
             </div>
         </div>
+        <div class="container-div" id="clear-settings-div">
+            <button id="clear-settings-button">CLEAR ALL SETTINGS AND DATA</button>
+        </div>
 
         <script src="assets/js/global.js"></script>
         <script src="/api/getMetrics.js"></script>
         <script src="assets/js/settings.js"></script>
+        <script>
+            document.getElementById('clear-settings-button').addEventListener('click', function() {
+                localStorage.clear();
+                sessionStorage.clear();
+                alert('All settings and data have been cleared.');
+            });
+        </script>
 </body>
 
 </html>
