--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <h3 id="heading">Loading... Please Wait</h3>
         </div>
 
-        <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #6a0dad; color: white; padding: 40px; border: 4px solid #4b0082; border-radius: 10px; z-index: 1000; text-align: center;">
+        <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #6a0dad; color: red; padding: 60px; border: 4px solid #4b0082; border-radius: 10px; z-index: 1000; text-align: center;">
             <p>Go Check Out <a href="https://lupine.red" style="color: #ffccff; text-decoration: none;" target="_blank">LupineVault RED</a>!</p>
+            <p id="countdown"></p>
         </div>
 
         <div id="tilesContainer">
@@ -83,10 +84,20 @@
     <script>
         window.onload = function() {
             var popup = document.getElementById('popup');
+            var countdownElement = document.getElementById('countdown');
+            var countdown = 5;
+
             popup.style.display = 'block';
-            setTimeout(function() {
-                popup.style.display = 'none';
-            }, 5000);
+            countdownElement.innerText = countdown + ' seconds remaining';
+
+            var interval = setInterval(function() {
+                countdown--;
+                countdownElement.innerText = countdown + ' seconds remaining';
+                if (countdown <= 0) {
+                    clearInterval(interval);
+                    popup.style.display = 'none';
+                }
+            }, 1000);
         };
     </script>
 </body>
