Add Ultimate Arcade partner link and image to the info page

--- a/info/index.html
+++ b/info/index.html
@@ -59,6 +59,8 @@
                             src="/assets/images/partners/TIW.png" alt="TIW"><br>TIW</a>
                     <a class="partnerLink" href="https://benrogo.net/"><img class="partnerImg"
                             src="/assets/images/partners/benrogo.png" alt="benrogo.net"><br>benrogo.net</a>
+                    <a class="partnerLink" href="https://sites.google.com/view/ultimate-arcade"><img class="partnerImg"
+                            src="/assets/images/partners/ultimate.png" alt="Ultimate Arcade"><br>Ultimate Arcade</a>
                 </div>
             </div>
         </div>
