--- a/info/index.html
+++ b/info/index.html
@@ -30,7 +30,7 @@
                 wallpaper, put it on a public computer (library, school, etc.) and add LupineVault to desktop and put it
                 in the silver box. Then take a picture and send it to <a
                     href="mailto:rhw@lupinevault.com">rhw@lupinevault.com</a> to get a prize! Don't know how? <a
-                    href="assets/vids/CoyoteCrusadersDemoVid2025.mp4">Here's a demo video!</a></p>
+                    href="../assets/vids/CoyoteCrusadersDemoVid2025.mp4">Here's a demo video!</a></p>
             <br>
 
             <h3>Get Involved</h3>
