Add new partner links and images for benrogo.net and Vapor

--- a/info/index.html
+++ b/info/index.html
@@ -49,16 +49,18 @@
                 <div class="flex-vert">
                     <a class="partnerLink" href="https://frogiesarcade.win/"><img class="partnerImg"
                             src="/assets/images/partners/froggies.gif" alt="Froggie's Arcade"><br>Froggie's Arcade</a>
+                    <a class="partnerLink" href="https://benrogo.net/"><img class="partnerImg"
+                            src="/assets/images/partners/benrogo.png" alt="benrogo.net"><br>benrogo.net</a>
                     <a class="partnerLink" href="https://vidify.top/"><img class="partnerImg"
                             src="/assets/images/partners/vidify.png" alt="vidify.top"><br>vidify.top</a>
                     <a class="partnerLink" href="https://voucan-us4.github.io/"><img class="partnerImg"
                             src="/assets/images/partners/US4.png" alt="US4"><br>US4</a>
                     <a class="partnerLink" href="https://ixl.brunys.site/"><img class="partnerImg"
                             src="/assets/images/partners/BIW.png" alt="BrunysIXLWork"><br>BrunysIXLWork</a>
+                    <a class="partnerLink" href="https://vaporsite.pages.dev/"><img class="partnerImg"
+                            src="/assets/images/partners/vapor.png" alt="Vapor"><br>Vapor</a>
                     <a class="partnerLink" href="https://starttiw.org/"><img class="partnerImg"
                             src="/assets/images/partners/TIW.png" alt="TIW"><br>TIW</a>
-                    <a class="partnerLink" href="https://benrogo.net/"><img class="partnerImg"
-                            src="/assets/images/partners/benrogo.png" alt="benrogo.net"><br>benrogo.net</a>
                     <a class="partnerLink" href="https://sites.google.com/view/ultimate-arcade"><img class="partnerImg"
                             src="/assets/images/partners/ultimate.png" alt="Ultimate Arcade"><br>Ultimate Arcade</a>
                 </div>
