--- a/info/index.html
+++ b/info/index.html
@@ -63,6 +63,8 @@
                             src="/assets/images/partners/TIW.png" alt="TIW"><br>TIW</a>
                     <a class="partnerLink" href="https://sites.google.com/view/ultimate-arcade"><img class="partnerImg"
                             src="/assets/images/partners/ultimate.png" alt="Ultimate Arcade"><br>Ultimate Arcade</a>
+                    <a class="partnerLink" href="https://yixboost.github.io/"><img class="partnerImg"
+                            src="/assets/images/partners/yixboost.png" alt="YixBoost"><br>YixBoost</a>
                 </div>
             </div>
         </div>
