--- a/info/index.html
+++ b/info/index.html
@@ -61,10 +61,13 @@
                             src="/assets/images/partners/vapor.png" alt="Vapor"><br>Vapor</a>
                     <a class="partnerLink" href="https://starttiw.org/"><img class="partnerImg"
                             src="/assets/images/partners/TIW.png" alt="TIW"><br>TIW</a>
+                    <a class="partnerLink" href="https://petezahgames.com/"><img class="partnerImg"
+                            src="/assets/images/partners/petezah.png" alt="PeteZah"><br>PeteZah</a>
                     <a class="partnerLink" href="https://sites.google.com/view/ultimate-arcade"><img class="partnerImg"
                             src="/assets/images/partners/ultimate.png" alt="Ultimate Arcade"><br>Ultimate Arcade</a>
                     <a class="partnerLink" href="https://yixboost.github.io/"><img class="partnerImg"
                             src="/assets/images/partners/yixboost.png" alt="YixBoost"><br>YixBoost</a>
+                            
                 </div>
             </div>
         </div>
