Add Vortex as a partner with logo to the info page

--- a/info/index.html
+++ b/info/index.html
@@ -65,6 +65,8 @@
                             src="/assets/images/partners/petezah.png" alt="PeteZah"><br>PeteZah</a>
                     <a class="partnerLink" href="https://sites.google.com/view/ultimate-arcade"><img class="partnerImg"
                             src="/assets/images/partners/ultimate.png" alt="Ultimate Arcade"><br>Ultimate Arcade</a>
+                    <a class="partnerLink" href="https://vortexos.net/"><img class="partnerImg"
+                            src="/assets/images/partners/vortex.png" alt="Vortex"><br>Vortex</a>
                     <a class="partnerLink" href="https://yixboost.github.io/"><img class="partnerImg"
                             src="/assets/images/partners/yixboost.png" alt="YixBoost"><br>YixBoost</a>
                             
